Warning modal dark mode issue fix

--- a/src/Pages/Home.scss
+++ b/src/Pages/Home.scss
@@ -52,6 +52,7 @@ button {
         margin-bottom: 20px;
         font-size: 1.2rem;
         font-family: IBM Plex sans;
+        color: var(--color-black);
     }
     .button {
         margin-top: 10px;
